--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,25 @@
 			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
 			<version>2.1.5</version>
 		</dependency>
+		
+		<dependency>
+		  	<groupId>org.apache.httpcomponents</groupId>
+		  	<artifactId>httpclient</artifactId>
+		  	<version>4.4.1</version>
+		</dependency>	
+		
+		<dependency>
+		  	<groupId>org.apache.httpcomponents</groupId>
+		  	<artifactId>fluent-hc</artifactId>
+		  	<version>4.4.1</version>
+		</dependency>
+		
+		<dependency>
+			 <!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			 <groupId>org.jsoup</groupId>
+			 <artifactId>jsoup</artifactId>
+			 <version>1.8.2</version>
+		</dependency>		
 	</dependencies>
 
 	<build>
