--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,11 @@
 			 <groupId>org.jsoup</groupId>
 			 <artifactId>jsoup</artifactId>
 			 <version>1.8.2</version>
-		</dependency>		
+		</dependency>
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
