--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
 
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:mothertest;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password: sa
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/project_manager
+    username: root
+    password: 6esncj4m
    
   jpa:
      hibernate:
-       ddl-auto: create-drop
+       ddl-auto: update
